<resources>
    <string name="app_name">Quizzer</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_please_enter_your_name">Please enter your name</string>
    <string name="hint_name">Name</string>
    <string name="txt_start">Start</string>
    <string name="text_what_is_the_name_of_this_player">What is the name of this player?</string>
    <string name="player_image">Player Image</string>
    <string name="txt_submit">Submit</string>
    <string name="result">Result</string>
    <string name="hey_congratulations">Hey, Congratulations!!</string>
    <string name="text_finish">Finish</string>
</resources>